[package]
authors = ["The Rust Project Developers"]
description = "Rational numbers implementation for Rust"
documentation = "https://docs.rs/num-rational"
homepage = "https://github.com/rust-num/num-rational"
keywords = ["mathematics", "numerics", "fractions"]
categories = ["algorithms", "data-structures", "science", "no-std"]
license = "MIT/Apache-2.0"
name = "num-rational"
repository = "https://github.com/rust-num/num-rational"
version = "0.2.2"
readme = "README.md"
build = "build.rs"
exclude = ["/ci/*", "/.travis.yml", "/bors.toml", "/sgx/*"]

[package.metadata.docs.rs]
features = ["std", "bigint-std", "serde"]

[dependencies]
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[dependencies.num-bigint]
optional = true
default-features = false
branch = "veracruz"
git = "https://github.com/veracruz-project/num-bigint.git"

[dependencies.num-integer]
default-features = false
branch = "veracruz"
git = "https://github.com/veracruz-project/num-integer.git"

[dependencies.num-traits]
default-features = false
branch = "veracruz"
git = "https://github.com/veracruz-project/num-traits.git"

[dependencies.serde]
optional = true
version = "1.0.0"
default-features = false
#git = "https://github.com/mesalock-linux/serde-sgx"

[features]
default = ["bigint-std", "std"]
i128 = ["num-integer/i128", "num-traits/i128"]
std = ["num-integer/std", "num-traits/std"]
bigint = ["num-bigint"]
bigint-std = ["bigint", "num-bigint/std"]
mesalock_sgx = ["sgx_tstd", "i128", "num-integer/mesalock_sgx", "num-traits/mesalock_sgx", "num-bigint/mesalock_sgx"]

[build-dependencies]
autocfg = "0.1.3"
